--- a/css/02-box-model/css/style.css
+++ b/css/02-box-model/css/style.css
@@ -3,17 +3,27 @@ body {
   /* background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("../images/lion.jpg") no-repeat center fixed; */
 
-  background: url("../images/lion.jpg") no-repeat center center fixed;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("../images/lion.jpg") no-repeat center center fixed;
   background-size: cover;
+}
+
+div{
+  background-color: #27d9e7;
+}
+
+i{
+  color: #000ff0;
 }
 
 h1 {
   color: bisque;
   text-align: center;
-  border: 3px solid #ff0000;
 
-  width: 300px;
+  width: 500px;
   padding: 20px;
   margin: 0 auto;
   margin-top: 300px;
+  font-family: "Merriweather", serif;
+  font-size: 3em;
 }
